k8s/platform/components/data-services/rabbitmq/rabbitmq-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-ui-route
  namespace: event-management
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rabbitmq.desarrollo`)
      kind: Rule
      services:
        - name: rabbitmq
          port: 15672
